--- a/css/style.css
+++ b/css/style.css
@@ -134,7 +134,11 @@ main .container {
 .product-card-inner {
     position: relative;
     width: 100%;
-    height: 180px;
+    height: 120px;
+    min-height: unset;
+    display: block;
+    position: relative;
+    transform: none;
     margin-bottom: 15px;
     /* Remove absolute positioning and 100% height from parent */
 }
@@ -153,7 +157,11 @@ main .container {
 .product-card-front {
     background-color: #fff;
     border: 1px solid #f0e9d6;
-    z-index: 2;
+    z-index: 1;
+    position: relative;
+    display: block;
+    transform: none;
+    height: 120px;
 }
 
 .product-card-back {
@@ -167,6 +175,7 @@ main .container {
     align-items: center;
     box-sizing: border-box;
     z-index: 3;
+    display: none;
 }
 
 .product-card:hover .product-card-inner {
@@ -180,8 +189,8 @@ main .container {
 
 .product-card img {
     width: 100%;
-    height: 100%;
-    object-fit: contain;
+    height: 120px;
+    object-fit: cover;
     border-radius: 8px 8px 0 0;
     display: block;
     background-color: #fdfaf3;
@@ -2564,11 +2573,15 @@ main .container p {
         display: block;
         transform: none;
         height: 120px;
+        z-index: 1;
+    }
+    .product-card-back {
+        display: none;
     }
     .product-card img {
         width: 100%;
         height: 120px;
-        object-fit: contain;
+        object-fit: cover;
         border-radius: 8px 8px 0 0;
         display: block;
         background-color: #fdfaf3;
